--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1008,24 +1008,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8997277\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 25\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "r, c = map(int, re.findall(r'\\d+', input))\n",
+    "\n",
+    "def next_code(n):\n",
+    "    return n * 252533 % 33554393\n",
+    "\n",
+    "index = sum(range(r+c-1)) + c - 1\n",
+    "code = 20151125\n",
+    "\n",
+    "for _ in range(index):\n",
+    "    code = next_code(code)\n",
+    "    \n",
+    "print(code)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "day = 25\n",
-    "input = get_input(day)\n",
-    "\n",
-    "import numpy as np\n",
-    "import re\n",
-    "from collections import Counter, defaultdict\n",
-    "from copy import deepcopy\n",
-    "from functools import reduce, partial\n",
-    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
-    "from operator import add, mul, truediv, floordiv, sub\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
