--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -320,11 +320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207\n",
+      "804\n"
+     ]
+    }
+   ],
    "source": [
     "day = 9\n",
     "input = get_input(day)\n",
@@ -356,11 +365,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['Faerun', 'Tambi', 'Norrath', 'Tristram', 'AlphaCentauri', 'Arbre', 'Snowdin', 'Straylight'], 757)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternate Day 9\n",
+    "day = 9\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import copy\n",
+    "import math\n",
+    "import re\n",
+    "import random\n",
+    "from collections import defaultdict\n",
+    "from itertools import permutations\n",
+    "\n",
+    "m = defaultdict(dict)\n",
+    "for line in input.split('\\n'):\n",
+    "    x = re.match(r'(\\S+) to (\\S+) = (\\d+)', line)\n",
+    "    p1, p2 = x.group(1, 2)\n",
+    "    dist = int(x.group(3))\n",
+    "    m[p1][p2] = dist\n",
+    "    m[p2][p1] = dist\n",
+    "\n",
+    "def cost(node_list):\n",
+    "    return sum(m[a][b] for a, b in zip(node_list, node_list[1:]))\n",
+    "    \n",
+    "def neighbor(node_list):\n",
+    "    ns = copy.deepcopy(node_list)\n",
+    "    a = random.randrange(len(ns))\n",
+    "    b = a\n",
+    "    while b == a:\n",
+    "        b = random.randrange(len(ns))\n",
+    "    a, b = min(a, b), max(a, b)\n",
+    "    ns[a:b] = ns[b-1:a-1:-1]\n",
+    "    return ns\n",
+    "\n",
+    "def acceptance_probability(o, n, t):\n",
+    "    return math.exp((n - o)/t)\n",
+    "    \n",
+    "def anneal(sol):\n",
+    "    old_cost = cost(sol)\n",
+    "    T = 1.0\n",
+    "    T_min = 0.00001\n",
+    "    alpha = 0.95\n",
+    "    while T > T_min:\n",
+    "        i = 1\n",
+    "        while i <= 100:\n",
+    "            new_sol = neighbor(sol)\n",
+    "            new_cost = cost(new_sol)\n",
+    "            ap = acceptance_probability(old_cost, new_cost, T)\n",
+    "            if ap > random.random():\n",
+    "                sol = new_sol\n",
+    "                old_cost = new_cost\n",
+    "            i += 1\n",
+    "        T = T*alpha\n",
+    "    return sol, cost(sol)\n",
+    "    \n",
+    "nodes = list(m.keys())\n",
+    "random.shuffle(nodes)\n",
+    "print(anneal(nodes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "252594\n",
+      "3579328\n"
+     ]
+    }
+   ],
    "source": [
     "day = 10\n",
     "input = get_input(day)\n",
