--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -9,17 +9,26 @@
    "outputs": [],
    "source": [
     "def get_input(day):\n",
-    "    with open('../inputs/input%d.txt' % day) as f:\n",
+    "    with open('../inputs/2015/input%d.txt' % day) as f:\n",
     "        return f.read().strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "1795\n"
+     ]
+    }
+   ],
    "source": [
     "day = 1\n",
     "input = get_input(day)\n",
@@ -38,11 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1606483\n",
+      "3842356\n"
+     ]
+    }
+   ],
    "source": [
     "day = 2\n",
     "input = get_input(day)\n",
@@ -62,11 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2081\n",
+      "2341\n"
+     ]
+    }
+   ],
    "source": [
     "day = 3\n",
     "input = get_input(day)\n",
@@ -98,12 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "117946\n",
+      "3938038\n"
+     ]
+    }
+   ],
    "source": [
     "day = 4\n",
     "input = get_input(day)\n",
@@ -123,11 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "238\n",
+      "69\n"
+     ]
+    }
+   ],
    "source": [
     "day = 5\n",
     "input = get_input(day)\n",
@@ -150,11 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "543903\n",
+      "14687245\n"
+     ]
+    }
+   ],
    "source": [
     "day = 6\n",
     "input = get_input(day)\n",
@@ -191,11 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46065\n",
+      "14134\n"
+     ]
+    }
+   ],
    "source": [
     "day = 7\n",
     "input = get_input(day)\n",
@@ -249,11 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46065\n",
+      "14134\n"
+     ]
+    }
+   ],
    "source": [
     "# Alternate (way better) Day 7\n",
     "day = 7\n",
@@ -297,11 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1333\n",
+      "2046\n"
+     ]
+    }
+   ],
    "source": [
     "day = 8\n",
     "input = get_input(day)\n",
@@ -320,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Faerun', 'Tambi', 'Norrath', 'Tristram', 'AlphaCentauri', 'Arbre', 'Snowdin', 'Straylight'], 757)\n"
+      "(['Faerun', 'Norrath', 'Tristram', 'AlphaCentauri', 'Tambi', 'Straylight', 'Snowdin', 'Arbre'], 705)\n"
      ]
     }
    ],
@@ -439,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -475,11 +556,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hepxxyzz\n",
+      "heqaabcc\n"
+     ]
+    }
+   ],
    "source": [
     "day = 11\n",
     "input = get_input(day)\n",
@@ -516,11 +606,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "156366\n",
+      "96852\n"
+     ]
+    }
+   ],
    "source": [
     "day = 12\n",
     "input = get_input(day)\n",
@@ -543,11 +642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "664\n",
+      "640\n"
+     ]
+    }
+   ],
    "source": [
     "day = 13\n",
     "input = get_input(day)\n",
@@ -581,11 +689,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2640\n",
+      "1102\n"
+     ]
+    }
+   ],
    "source": [
     "day = 14\n",
     "input = get_input(day)\n",
@@ -629,11 +746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21367368\n",
+      "1766400\n"
+     ]
+    }
+   ],
    "source": [
     "day = 15\n",
     "input = get_input(day)\n",
@@ -669,11 +795,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21367368\n",
+      "1766400\n"
+     ]
+    }
+   ],
    "source": [
     "# Alternate Day 15\n",
     "day = 15\n",
@@ -682,7 +817,7 @@
     "import re\n",
     "import numpy as np\n",
     "\n",
-    "from sympy import symbol\n",
+    "from sympy import symbols\n",
     "from scipy.optimize import minimize\n",
     "\n",
     "from functools import reduce\n",
@@ -715,11 +850,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "373\n",
+      "260\n"
+     ]
+    }
+   ],
    "source": [
     "day = 16\n",
     "input = get_input(day)\n",
@@ -774,11 +918,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1304\n",
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "day = 17\n",
     "input = get_input(day)\n",
@@ -806,11 +959,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "886\n"
+     ]
+    }
+   ],
    "source": [
     "day = 18\n",
     "input = get_input(day)\n",
@@ -851,11 +1012,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "509\n",
+      "195\n"
+     ]
+    }
+   ],
    "source": [
     "day = 19\n",
     "input = get_input(day)\n",
@@ -889,11 +1059,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "786240\n",
+      "831600\n"
+     ]
+    }
+   ],
    "source": [
     "day = 20\n",
     "input = get_input(day)\n",
@@ -916,11 +1095,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121\n",
+      "201\n"
+     ]
+    }
+   ],
    "source": [
     "day = 21\n",
     "input = get_input(day)\n",
@@ -998,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -1010,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1019,8 +1207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 1, 'b': 170}\n",
-      "{'a': 1, 'b': 247}\n"
+      "{'b': 170, 'a': 1}\n",
+      "{'b': 247, 'a': 1}\n"
      ]
     }
    ],
@@ -1063,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1100,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1159,7 +1347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
